Aress7/src/objects/Individual.object
<CustomObject>
    <fields>
        <fullName>ConsentLandingPageURL_SPPSUBE__c</fullName>
        <label>Landing Page URL If Applicable (SPPSUBE)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_HAHBE__c</fullName>
        <label>Date Consent Was Obtained (HAHBE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_HAHBP__c</fullName>
        <label>Date Consent Was Obtained (HAHBP)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_SPPSUBE__c</fullName>
        <label>Date Consent Was Obtained (SPPSUBE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentType_HAHBE__c</fullName>
        <label>Consent Type (HAHBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsentType_HAHBP__c</fullName>
        <label>Consent Type (HAHBP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsentType_SPPSUBE__c</fullName>
        <label>Consent Type (SPPSUBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_HAHBE__c</fullName>
        <label>Where Consent Was Obtained (HAHBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership Portal</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_HAHBP__c</fullName>
        <label>Where Consent Was Obtained (HAHBP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership Tool</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_SPPSUBE__c</fullName>
        <label>Where Consent Was Obtained (SPPSUBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership Tool</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Open Charge Mobile App</fullName>
                </value>
                <value>
                    <fullName>Open Charge Web App</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Arrange HC By Email (HAHBE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Arrange HC By Phone (HAHBP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_SPPSUBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send PP P&amp;S Updates By Email (SPPSUBE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowConsentWasObtained_HAHBE__c</fullName>
        <label>How Consent Was Obtained (HAHBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership collected consent from customer</fullName>
                </value>
                <value>
                    <fullName>User consented during web checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HowConsentWasObtained_HAHBP__c</fullName>
        <label>How Consent Was Obtained (HAHBP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership collected consent from customer</fullName>
                </value>
                <value>
                    <fullName>User consented during web checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HowConsentWasObtained_SPPSUBE__c</fullName>
        <label>How Consent Was Obtained (SPPSUBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dealership collected consent from customer</fullName>
                </value>
                <value>
                    <fullName>User consented during web checkout</fullName>
                </value>
                <value>
                    <fullName>User consented while downloading gated content</fullName>
                </value>
                <value>
                    <fullName>User consented while signing up to Open Charge app</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_HAHBE__c</fullName>
        <label>What Individual Was Told (HAHBE)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_HAHBP__c</fullName>
        <label>What Individual Was Told (HAHBP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_SPPSUBE__c</fullName>
        <label>What Individual Was Told (SPPSUBE)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>